--- a/translation.yml
+++ b/translation.yml
@@ -1,4 +1,4 @@
-source_language: en
+source_language: de
 target_languages: [bg, cs, da, de, el, es, fi, fr, hr, hu, id, it, ja, ko, lt, nb, nl, pl, pt-BR, pt-PT, ro, ru, sk, sl, sv, th, tr, vi, zh-CN, zh-TW]
 non_blocking_languages: []
 async_pr_mode: per_pr
